[package]
name = "javalette"
version = "0.1.0"
authors = ["Paul CACHEUX <paulcacheux@gmail.com>"]

[lib]
name = "javalette"
path = "src/lib.rs"

[[bin]]
name = "jlc"
path = "src/driver.rs"


[dependencies]
lazy_static = "1.0.0"
regex = "0.2.3"
if_chain = "0.1.2"
clap = "2.29"
llvm-sys = "50"
libc = "0.2"
