[package]
name = "yal"
version = "0.2.0"
authors = ["Paul CACHEUX <paulcacheux@gmail.com>"]

[lib]
name = "yal"
path = "src/lib.rs"

[[bin]]
name = "yalc"
path = "src/driver.rs"


[dependencies]
lazy_static = "1.0.0"
regex = "0.2.3"
if_chain = "0.1.2"
clap = "2.29"
llvm-sys = "50"
libc = "0.2"
typed-arena = "1.3"
